--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
 						<div class="texto1">Hola, soy Christian Concha</div>
 						<div class="texto2">Analista de datos</div>
 						<div class="texto3">Dedicado a crear soluciones eficientes y optimizadas que maximicen el valor de la información.</div>
-						<div class="flex justify-center gap-x-4">
-							<a href="#main" download class="button icon solid fa-light fa-arrow-right scrolly ">Portafolio</a>
-							<a href="assets/CV CHRISTIAN ANDRÉS CONCHA CARO-1.pdf" download class="button icon solid fa-regular fa-download scrolly">Curriculum</a>
+						<div class="buttons-container">
+							<a href="#main" download class="button portfolio-button"><i class="fas fa-light fa-arrow-right"></i> Portafolio</a>
+							<a href="assets/CV CHRISTIAN ANDRÉS CONCHA CARO-1.pdf" download class="button curriculum-button"><i class="fas fa-regular fa-download"></i> Curriculum</a>
 						</div>
+						
+						
 					</div>
 				</div>
 
