--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 									<div class="tag">Power Bi</div>
 									<div class="tag">Dax</div>
 								</div>
-								<div class="flex justify-center gap-x-4">
-									<a href="#main" class="button icon solid fa-light fa-arrow-right" style="color: white">Ver</a>
+								<div class="buttons-container">
+									<a href="#main" class="button portfolio-button"><i class="fas fa-light fa-arrow-right"></i> ver</a>
 								</div>
 							</div>
 							<figure class="contenedor_imagen">
 								<img class="imagen_destacada" src="images/PowerBi ejemplo.png" alt="Descripción de la imagen">
 							</figure>
+
 						</article>
 						<article id="reporte2" class="reporte2">
 							<figure class="contenedor_imagen">
@@ -69,8 +70,8 @@
 									<div class="tag">Power Bi</div>
 									<div class="tag">Dax</div>
 								</div>
-								<div class="flex justify-center gap-x-4">
-									<a href="#main" class="button icon solid fa-light fa-arrow-right" style="color: white">Ver</a>
+								<div class="buttons-container">
+									<a href="#main" class="button portfolio-button"><i class="fas fa-light fa-arrow-right"></i> ver</a>
 								</div>
 							</div>
 						</article>
@@ -132,7 +133,7 @@
 						
 						<div class="icon_contactos">
 							<div class="otros_contactos">
-								Tambien pueds encontrarme en
+								Tambien puedes encontrarme en
 							</div>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/christian-concha-660626199/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
