--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 						<div class="texto2">Analista de datos</div>
 						<div class="texto3">Dedicado a crear soluciones eficientes y optimizadas que maximicen el valor de la información.</div>
 						<div class="buttons-container">
-							<a href="#main" download class="button portfolio-button"><i class="fas fa-light fa-arrow-right"></i> Portafolio</a>
+							<a href="#main" class="button portfolio-button"><i class="fas fa-light fa-arrow-right"></i> Portafolio</a>
 							<a href="assets/CV CHRISTIAN ANDRÉS CONCHA CARO-1.pdf" download class="button curriculum-button"><i class="fas fa-regular fa-download"></i> Curriculum</a>
 						</div>
 						
