--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 										<p class="titulo">Programación</p>
 										<p class="habilidad" title="Nivel: Intermedio"><i class="fas fa-chevron-right flecha"></i> Python</p>
 										<p class="habilidad" title="Nivel: Intermedio"><i class="fas fa-chevron-right flecha"></i> Java</p>
+										<p class="habilidad" title="Nivel: Básico"><i class="fas fa-chevron-right flecha"></i> Html</p>
+										<p class="habilidad" title="Nivel: Básico"><i class="fas fa-chevron-right flecha"></i> CSS</p>
 									</div>
 									<div class="tecnologias">
 										<p class="titulo">Tecnologias</p>
@@ -126,7 +128,7 @@
 					<div class="footer_izquierdo">
 						<div class="datos_contacto">
 							Datos contacto </br>
-							Email: christian.concha.caro@gmail.com
+							Email: christian.concha.caro@gmail.com </br>
 						</div>
 					</div>
 					<div class="footer_derecho">
@@ -136,8 +138,8 @@
 								Tambien puedes encontrarme en
 							</div>
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/christian-concha-660626199/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
-								<li><a href="https://github.com/ChristianCC1993" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/christian-concha-660626199/" class="icon brands fa-linkedin" target="_blank"><span class="label">Twitter</span></a></li>
+								<li><a href="https://github.com/ChristianCC1993" class="icon brands fa-github" target="_blank"><span class="label" >GitHub</span></a></li>
 							</ul>
 						</div>
 					</div>
