--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
 		<!-- ***** Barra Superior ***** -->
 		<nav id="menu-simple">
-			<ul class links>
+			<ul class="botones" links>
 				<li><a href="#intro">Inicio</a></li>
+				<li><a href="#portafolio">Proyectos</a></li>
 				<li><a href="#sobre_mi">Sobre mi</a></li>
-				<li><a href="#portafolio">proyectos</a></li>
 				<li><a href="#footer">Contacto</a></li>
 			</ul>
 		</nav>
@@ -31,8 +31,6 @@
 							<a href="#main" class="button portfolio-button"><i class="fas fa-light fa-arrow-right"></i> Portafolio</a>
 							<a href="assets/CV CHRISTIAN ANDRÉS CONCHA CARO-1.pdf" download class="button curriculum-button"><i class="fas fa-regular fa-download"></i> Curriculum</a>
 						</div>
-						
-						
 					</div>
 				</div>
 
@@ -156,6 +154,5 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
 	</body>
 </html>
